@@ -1,5 +1,10 @@
 2014-05-07  Paolo Carlini  <paolo.carlini@oracle.com>
 
+	PR c++/61083
+	* g++.dg/cpp0x/sfinae50.C: New.
+
+2014-05-07  Paolo Carlini  <paolo.carlini@oracle.com>
+
 	PR c++/61080
 	* g++.dg/cpp0x/deleted7.C: New.
 
