@@ -1,5 +1,11 @@
 2014-05-07  Paolo Carlini  <paolo.carlini@oracle.com>
 
+	PR c++/61083
+	* pt.c (convert_nontype_argument): Protect all the error calls
+	with complain & tf_error.
+
+2014-05-07  Paolo Carlini  <paolo.carlini@oracle.com>
+
 	PR c++/61080
 	* pt.c (instantiate_decl): Avoid generating the body of a
 	deleted function.
